--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "mabizon-sms-stripe",
+  "name": "mobizon-sms-stripe",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.7",
+    "@mui/joy": "^5.0.0-beta.48",
     "@mui/material": "^5.16.7",
     "@stripe/react-stripe-js": "^2.7.3",
     "@stripe/stripe-js": "^4.2.0",
@@ -13,10 +14,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.3",
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
+    "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
     "mariadb": "^3.3.1",
     "nodemailer": "^6.9.14",
@@ -52,6 +56,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "proxy": "http://localhost:5000"
+  }
 }
