--- a/package.json
+++ b/package.json
@@ -23,13 +23,19 @@
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
     "express-session": "^1.18.0",
+    "i18next": "^23.14.0",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-http-backend": "^2.6.1",
     "jsonwebtoken": "^9.0.2",
     "mariadb": "^3.3.1",
     "mysql2": "^3.11.0",
+    "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.14",
     "nodemon": "^3.1.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.0.1",
+    "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
     "stripe": "^16.7.0",
