--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "bull": "^4.16.3",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dayjs": "^1.11.13",
@@ -28,6 +29,7 @@
     "i18next-http-backend": "^2.6.1",
     "jsonwebtoken": "^9.0.2",
     "mariadb": "^3.3.1",
+    "moment-timezone": "^0.5.45",
     "mysql2": "^3.11.0",
     "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.14",
